--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <main>
       <!--HERO section-->
-      <section class="hero hide">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
@@ -441,7 +441,7 @@
     </main>
 
     <!--FOOTER-->
-    <footer class="footer hide">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-box">
           <a class="footer-logo" href="./index.html"
