--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
 
       <!--Feautures section-->
-      <section class="feautures hide">
+      <section class="feautures">
         <div class="container">
           <h2 class="visually-hidden">Feauters</h2>
           <ul class="feautures-list">
@@ -141,7 +141,7 @@
       </section>
 
       <!--Our team section-->
-      <section class="team hide">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
 
@@ -318,7 +318,7 @@
       </section>
 
       <!--Our portfolio section-->
-      <section class="portfolio hide">
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
